--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2 id="text1"></h2>
-    <h1 id="output">I Love You! 😁</h1>
+    <h4 id="text1"></h4>
+    <h4 id="output">I Love You!</h4>
 </body>
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
