--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <center>
 <div class="sound" style="text-decoration: none; font-size: 20px;">Letter From Olajide To Yetunde</div>
 </center>
-<script src='http://cdn.jsdelivr.net/mojs/latest/mo.min.js'></script>
+<script src='https://cdn.jsdelivr.net/mojs/latest/mo.min.js'></script>
 <script src="index.js"></script>
 </body>
 </html>
