--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
   <source src="https://www.freesound.org/data/previews/265/265115_4373976-lq.mp3" type="audio/ogg">
 </audio>
 <center>
-<div class="sound" style="text-decoration: none; font-size: 20px; margin-right: 30%">Letter From Olajide To Yetunde</div>
+<div class="sound" style="text-decoration: none; font-size: 20px; margin-right: 5%">Tap Here for Sound</div><br>
+<div class="sound" style="text-decoration: none; font-size: 20px; margin-right: 40%">Letter From Olajide To Yetunde</div>
 </center>
 <script src='https://cdn.jsdelivr.net/mojs/latest/mo.min.js'></script>
 <script src="index.js"></script>
